Fixed titles on mobile

--- a/style.scss
+++ b/style.scss
@@ -31,6 +31,7 @@ body {
         width: 100vw;
         padding-top: 75px;
         padding-left: 200px;
+        padding-bottom: 50px;
 
         @media only screen and (max-width: $mobileThreshold) {
             padding-top: 50px;
